@@ -6,6 +6,7 @@ v4.9.0 (2022.03.xx)
   - Update cURL library to version 7.82.0-DEV (6c82e3f4)
   - Update libxml2 library to version 2.9.13
   - Add available HDHomeRun ecosystem object counts to 'List discovered devices' PVR Client specific setting
+  - Fix bug causing a malformed URL to be sent to the backend when querying legacy device channel lineups
 
 v4.8.1 (2022.02.12)
   - Fix HTTP query error messages reporting the multipart/form-data POST operation method as 'get'
